[package]
name = "dns_relay"
version = "0.1.0"
authors = ["TOMATOFAQ <31461318+TOMATOFAQ@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bitfield = "0.13.2" # 位域备选方案
chrono = "0.4"
byteorder = "1.3.4"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]